--- a/process_wi.awk.in
+++ b/process_wi.awk.in
@@ -191,6 +191,7 @@ END  {
       delete saveds[ncind];  delete savedp[ncind]; @\
       } @\
     } @\
+  comp_param=save_cp[n]; comp=save_c[n]; @\
   } @\
 
   if ( verbose && (nreq>0) )  printf ( "\n" );
@@ -199,6 +200,8 @@ END  {
   n = 1;  try[1] = 0;
 
   while ( (n>0) && (n<=nreq) )  {	// Основной цикл поиска вглубь
+
+    save_cp[n] = comp_param;  save_c[n] = comp;
 
     if ( verbose )  {
       indent="";  for ( v=1; v<n; v++ )  {indent=indent"    "}
@@ -210,7 +213,7 @@ END  {
 
    // Варианты исчерпались ?
     if ( try[n] > total )
-      {n--; comp_param=save_cp[n]; comp=save_c[n];  n_cleanup; continue;}
+      {n--; n_cleanup; set_conflicts; continue;}
 
    // Нет, еще есть вариант
     if ( verbose )  {
@@ -292,9 +295,8 @@ END  {
       if ( clist[nreq]=="" )  vip = 0;
       }
 
-    if ( vip==0 )  {cleanup; continue;}
+    if ( vip==0 )  {n_cleanup; continue;}
 
-    save_cp[n] = comp_param;  save_c[n] = comp;
     n++;  try[n] = 0;
     
     }
