--- a/Makefile.cvslvk
+++ b/Makefile.cvslvk
@@ -67,7 +67,7 @@ override CL_GCC_OPTIMIZE := $(CL_GCC_OPTIMIZE)
 # Either just names or name:val1|...|valN
 
 # Check some system settings also
-override CL_VARS += $(if $(CL_COMP),CL_COMP:gcc32|gcc295|gcc296)
+override CL_VARS += $(if $(CL_COMP),CL_COMP:gcc33|gcc32|gcc295|gcc296)
 override CL_VARS += $(if $(CL_LTYPE),CL_LTYPE:shared|static)
 override CL_VARS += $(if $(filter create_wi update_wi,$(MAKECMDGOALS)),CL_MODULE)
 override CL_VARS += $(if $(filter install,$(MAKECMDGOALS)),CL_PREFIX)
@@ -97,9 +97,10 @@ override CL_OS := $(shell $(CL_HELPER) get_os)
 #   first parameter of "$(CL_HELPER) process_wi" is "need" or "compute",
 #     "need" means that compiler is the build parameter anyway,
 #     "compute" means that WI processing should find out whether it is needed 
-#   second parameter of "$(CL_HELPER) process_wi" is "gcc32" or "gcc295" or "gcc296" or "any"
+#   second parameter of "$(CL_HELPER) process_wi" is "gcc33" or "gcc32" or
+#     "gcc295" or "gcc296" or "any"
 #     "gcc*" means that exacltly this compiler should be used
-#     "any" means that WI processing should choose (it will try to use gcc32
+#     "any" means that WI processing should choose (it will try to use gcc33
 #     if possible)
 
 override CL_COMP_TMP := $(if $(CL_COMP),$(CL_COMP),any)
@@ -123,6 +124,9 @@ ifeq ($(filter comp_param_needed comp_param_not_needed,$(CL_RES)),comp_param_nee
 override CL_PARAM_COMP := 1
 endif
 
+ifeq ($(filter gcc33,$(CL_RES)),gcc33)
+override CL_COMP := gcc33
+endif
 ifeq ($(filter gcc32,$(CL_RES)),gcc32)
 override CL_COMP := gcc32
 endif
@@ -138,7 +142,7 @@ endif
 
 # Get the full WI list to use
 
-override CL_WI_LIST := $(filter-out gcc32 gcc295 gcc296 any comp_param_needed comp_param_not_needed,$(CL_RES))
+override CL_WI_LIST := $(filter-out gcc33 gcc32 gcc295 gcc296 any comp_param_needed comp_param_not_needed,$(CL_RES))
 
 
 # Set CL_BTYPE and CL_LTYPE to be available at WI's rules.cvslvk inclution
