- Исправлена ошибка в вычислении списка требуемых WI (при проверке   depends.cvslvk, если первый из нескольких модулей уже был в списке   на подключение, то остальные не проверялись) - В Makefile.cvslvk, в -include для включения файлов-зависимостей, вставлена   проверка на пустоту включаемого списка (так как нашёлся содержательный   пример, где этот список пустой - при сборке стенда Suhoi)

--- a/Makefile.cvslvk
+++ b/Makefile.cvslvk
@@ -443,7 +443,10 @@ endif
 
 ifdef CL_LOCALWORK
 ifeq ($(filter install clean cleanall,$(MAKECMDGOALS)),)
--include $(addsuffix .deps, $(CL_OBJECTS_ALL))
+override CL_DEPS_TO_INCLUDE := $(addsuffix .deps, $(CL_OBJECTS_ALL))
+ifneq ($(CL_DEPS_TO_INCLUDE),)
+-include $(CL_DEPS_TO_INCLUDE)
+endif
 endif
 endif
 
