В нескольких строках исправил gcc на gcc295; наверное надо много где ещё

--- a/autobuild.conf
+++ b/autobuild.conf
@@ -33,8 +33,8 @@ gse:gse_gcc:gse:::wu:Графическйи редактор структурных описаний
 DyanaIDE:DyanaIDE:kdyana:::mmt,libmon-mtfloat,libmon-mtdouble,libmon-mtint,gse,vis,pa:IDE для Дианы (с vis, pa, gse)
 # специальные модули (их автоматическая сборка может проходить нестабильно)
 286model:286model:286model::::Модель 286-процессора
-DrGoose:Goose_gcc-shared:DrGoose::::Библиотека распределений случайных чисел goose
-DrEnv:Env_gcc-shared:DrEnv:::DrGoose:Модель датчиков и внешней среды для DrTesy
+DrGoose:Goose_gcc295-shared:DrGoose::CL_COMP=gcc295::Библиотека распределений случайных чисел goose
+DrEnv:Env_gcc295-shared:DrEnv::CL_COMP=gcc295:DrGoose:Модель датчиков и внешней среды для DrTesy
 DrTesy:Dr:DrTesy:::DrEnv,mmt,libmon-mtdouble,286model:Модель DrTesy (без IDE)
 parini:parini:parini:::
 nm_model:nm6403model:nm_model:::Model of the NM processor
